--- a/hyprland.conf
+++ b/hyprland.conf
@@ -77,6 +77,8 @@ device:epic-mouse-v1 {
 
 $mainMod = SUPER
 
+bind = SHIFT_SUPER, S, exec, grim -g "$(slurp)" - | wl-copy
+
 bind = CTRL_SHIFT, A, exec, tilix
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, nautilus
