--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -2,9 +2,10 @@ monitor=DP-1,preferred,auto,auto
 
 env = XCURSOR_SIZE,24
 
-swaybg -i ~/Downloads/wall.jpg
-exec-once = rofi -show run
+swaybg -i /home/demn/Downloads/wall.jpg # BG
+exec-once = rofi -show drun
 exec-once = waybar
+exec-once = swapon /bigswapfile
 
 input {
     kb_layout = us, ru
@@ -17,6 +18,8 @@ input {
 
     touchpad {
         natural_scroll = yes
+	tap-to-click = no
+	clickfinger_behavior = yes
     }
 
     sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
@@ -68,7 +71,9 @@ master {
 }
 
 gestures {
-    workspace_swipe = off
+    workspace_swipe = on
+    workspace_swipe_fingers = 3
+
 }
 
 device:epic-mouse-v1 {
@@ -83,7 +88,7 @@ bind = CTRL_SHIFT, A, exec, tilix
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating, 
-bind = SUPER, tab, exec, rofi -show run
+bind = SUPER, tab, exec, rofi -show drun
 
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
